@@ -79,7 +79,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> strategy.processFeed(posts, queryDTO));
+        assertThrows(IllegalArgumentException.class, () -> strategy.processFeed(posts, queryDTO, null));
     }
 
     @Test
@@ -92,7 +92,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> strategy.processFeed(posts, queryDTO));
+        assertThrows(IllegalArgumentException.class, () -> strategy.processFeed(posts, queryDTO, null));
     }
 
     @Test
@@ -105,7 +105,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> strategy.processFeed(posts, queryDTO));
+        assertThrows(IllegalArgumentException.class, () -> strategy.processFeed(posts, queryDTO, null));
     }
 
     @Test
@@ -119,7 +119,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(Collections.emptyList(), queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(Collections.emptyList(), queryDTO, null);
 
         // Assert
         assertTrue(result.isEmpty());
@@ -137,7 +137,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(3, result.getTotalElements());
@@ -169,11 +169,11 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(1, result.getTotalElements());
-        assertEquals("Medium Distance Post", ((PostData) result.getContent().get(0).get("post")).getTitle());
+        assertEquals("Medium Distance Post", ((PostData) result.getContent().getFirst().get("post")).getTitle());
     }
 
     @Test
@@ -188,11 +188,11 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(1, result.getTotalElements());
-        assertEquals("Far Away Post", ((PostData) result.getContent().get(0).get("post")).getTitle());
+        assertEquals("Far Away Post", ((PostData) result.getContent().getFirst().get("post")).getTitle());
     }
 
     @Test
@@ -207,7 +207,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(2, result.getTotalElements());
@@ -225,7 +225,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(2, result.getTotalElements());
@@ -245,11 +245,11 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(1, result.getTotalElements());
-        assertEquals("Nearby Post", ((PostData) result.getContent().get(0).get("post")).getTitle());
+        assertEquals("Nearby Post", ((PostData) result.getContent().getFirst().get("post")).getTitle());
     }
 
     @Test
@@ -263,7 +263,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(2, result.getContent().size());
@@ -284,7 +284,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(posts, queryDTO, null);
 
         // Assert
         assertEquals(1, result.getContent().size());
@@ -321,7 +321,7 @@ class DistanceFeedStrategyTest {
                 .build();
 
         // Act
-        Page<Map<String, Object>> result = strategy.processFeed(testPosts, queryDTO);
+        Page<Map<String, Object>> result = strategy.processFeed(testPosts, queryDTO, null);
 
         // Assert
         assertEquals(3, result.getTotalElements());
